--- a/article3.html
+++ b/article3.html
@@ -50,10 +50,11 @@
     <!--===========================================Navbar================================================-->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
-          <span class="king">
-            النجم
-          </span>  
-          الساطع </a>
+          <a class="navbar-brand" href="#">
+            <span class="king">
+              النجم
+            </span>  
+            الساطع </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
