--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav m-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">الرئيسية</a>
+                <a class="nav-link acótive" aria-current="page" href="index.html">الرئيسية</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">من نحن</a>
@@ -121,19 +121,15 @@
         </a>
       </div>
      <!--====================About us=======================-->
-      <section id="about" class="container-fluid">
+      <section id="about">
         <div class="container">
-            <div class="row">
-                <div class="col-3 m-auto">
-                    <p id="heading" class="display-1 ">من نحن</p>
-                </div>
-            </div>
+          <h4>من نحن</h4>
             <div class="row">
                 <div class="col-md-6 col-sm-12">
                     <img src="images/about.jpg" class="img-fluid" alt="">
                 </div>
-                <div class="col-md-6 col-sm-12">
-                    <h5>
+                <div class="col-md-6 col-sm-12 pt-2" id="sec">
+                    <h5 class="pt-4">
                         شركة النجم الساطع من افضل واسرع الشركات بالمملكة العربية السعودية
                     </h5>
                     <p class="lead">
