--- a/article2.html
+++ b/article2.html
@@ -80,7 +80,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">اتصل بنا</a>
+                <a class="nav-link" href="contact.html">اتصل بنا</a>
               </li>
             </ul>
           </div>
@@ -108,7 +108,9 @@
                         تواصل معنا علي 0566618124 
                       </p>
                       <img class="img-fluid" src="./images/article2_01.jpg" alt="">
-                      <p class="text-justify mt-4">The many swimming strokes will help you get different types of aerobic exercise and will provide a new challenge to master. All you need is your local swimming pool and you can literally shred hundreds of calories with an hour of swimming</p>
+                      <p class="text-justify mt-4">
+                      شركة النجم الساطع تساعدك علي التخلص من الحشرات بطريقة امنة وبدون مغادرة المنزل مع مراعات كافة الاجرائات الوقائية 
+                      </p>
                   </div>
                   <div class="col-md-12">
                       <h3>2. ابادة البق</h3>
@@ -195,7 +197,7 @@
               <div class="col-sm-12 col-md-6 col-lg-4">
                 <h5>آخر المقالات</h5>
                 <a href="article1.html" class="link d-block">طرق العزل</a>
-                <a href="article2.html" class="link d-block">التخلثص من الحشرات والقوارض</a>
+                <a href="article2.html" class="link d-block">التخلص من الحشرات والقوارض</a>
                 <a href="article3.html" class="link d-block"> عزل الخزانات</a>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-4">
