--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
               <div class="col-sm-12 col-md-6 col-lg-4">
                 <h5>آخر المقالات</h5>
                 <a href="article1.html" class="link d-block">طرق العزل</a>
-                <a href="article2.html" class="link d-block">التخلثص من الحشرات والقوارض</a>
+                <a href="article2.html" class="link d-block">التخلص من الحشرات والقوارض</a>
                 <a href="article3.html" class="link d-block"> عزل الخزانات</a>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-4">
