--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="1500">
             <img src="images/bg02.jpg" class="d-block w-100 ">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
               <h5>تنظيف مجالس وسجاد</h5>
               <p>
                 شركة تنظيف مجالس لجميع خدمات تنظيف الكنب وتنظيف الموكيت وتنظيف السجاد بارخص الاسعار
@@ -97,7 +97,7 @@
           </div>
           <div class="carousel-item" data-bs-interval="1500">
             <img src="images/bg01.jpg" class="d-block w-100">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
               <h5 class="w">تنظيف المنازل</h5>
               <p>تنظيف منازل ومجالس وخزانات و مكافحة الحشرات فى خميس مشيط و احد رفيدة والنماص الدرب و محايل عسير و جيزان والجنوب بالكامل </p>
             </div>
@@ -105,7 +105,7 @@
           
           <div class="carousel-item" data-bs-interval="1500">
             <img src="images/bg03.jpg" class="d-block w-100">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
               <h5>خدمات مكافحة الحشرات</h5>
               <p>شركة النجم الساطع لابادة الحشرات افضل شركة لمكافحة الحشرات بمبيدات طويلة المدى قوية المفعول. متابعات دورية مجانية بمبيدات بدون رائحة وبدون مغادرة للمنزل</p>
             </div>
@@ -432,7 +432,7 @@
               <div class="col-sm-12 col-md-6 col-lg-4">
                 <h5>آخر المقالات</h5>
                 <a href="article1.html" class="link d-block">طرق العزل</a>
-                <a href="article2.html" class="link d-block">التخلثص من الحشرات والقوارض</a>
+                <a href="article2.html" class="link d-block">التخلص من الحشرات والقوارض</a>
                 <a href="article3.html" class="link d-block"> عزل الخزانات        </a>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-4">
