--- a/article1.html
+++ b/article1.html
@@ -279,7 +279,7 @@
               <div class="col-sm-12 col-md-6 col-lg-4">
                 <h5>آخر المقالات</h5>
                 <a href="#" class="link d-block">طرق العزل</a>
-                <a href="#" class="link d-block">التخلثص من الحشرات والقوارض</a>
+                <a href="#" class="link d-block">التخلص من الحشرات والقوارض</a>
                 <a href="#" class="link d-block"> عزل الخزانات</a>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-4">
