--- a/index.html
+++ b/index.html
@@ -86,26 +86,26 @@
       <!-- ======================================Slider============================================-->
       <div id="myCarousel" class="carousel  carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="1500">
+          <div class="carousel-item active" data-bs-interval="1900">
             <img src="images/bg02.jpg" class="d-block w-100 ">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption ">
               <h5>تنظيف مجالس وسجاد</h5>
               <p>
                 شركة تنظيف مجالس لجميع خدمات تنظيف الكنب وتنظيف الموكيت وتنظيف السجاد بارخص الاسعار
               </p>
             </div>
           </div>
-          <div class="carousel-item" data-bs-interval="1500">
+          <div class="carousel-item" data-bs-interval="1900">
             <img src="images/bg01.jpg" class="d-block w-100">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5 class="w">تنظيف المنازل</h5>
               <p>تنظيف منازل ومجالس وخزانات و مكافحة الحشرات فى خميس مشيط و احد رفيدة والنماص الدرب و محايل عسير و جيزان والجنوب بالكامل </p>
             </div>
           </div>
           
-          <div class="carousel-item" data-bs-interval="1500">
+          <div class="carousel-item" data-bs-interval="1900">
             <img src="images/bg03.jpg" class="d-block w-100">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption ">
               <h5>خدمات مكافحة الحشرات</h5>
               <p>شركة النجم الساطع لابادة الحشرات افضل شركة لمكافحة الحشرات بمبيدات طويلة المدى قوية المفعول. متابعات دورية مجانية بمبيدات بدون رائحة وبدون مغادرة للمنزل</p>
             </div>
