--- a/article1.html
+++ b/article1.html
@@ -35,7 +35,7 @@
                             </li>
                          </ul>
                     </div>
-                    <div class="col-md-6 col-sm-12">
+                    <div class="col-md-6 col-sm-12 d-none d-md-block">
                         <ul class="list-inline top-2 d-flex justify-content-end">
                           <li class="list-inline-item"><a target="_blank" href="https://wa.link/ts8llf"><i class="fab fa-whatsapp"  aria-hidden="true"></i>                            </a></li>
                             <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
